# codex_workspace

./: ai_ide_launcher_v3.2.pyw  package-lock.json
LocalTranslator/: requirements.txt  run_translate.bat  translate_batch.py
blender_automation/: README.md  run_blender.ps1
cal/: __init__.py  excel_formula_summary.txt  generate_word_calculation_book.py  inspect_excel.py  lifting_lug_desktop.py  render_docx_windows.py  ~$计算书_20260710_102142.docx  吊耳计算书_20260710_091023.txt  吊耳计算书_20260710_091532.docx  吊耳计算书_20260710_100209.docx  吊耳计算书_20260710_100517.docx  吊耳计算书_20260710_101027.docx  吊耳计算书_20260710_102142.docx  吊耳计算书_20260710_103136.docx  吊耳计算书_20260710_103821.docx  吊耳计算书_20260710_105030.docx  启动吊耳验算程序.bat  桌面程序使用说明.md
cal-2/: generate_word_calculation_book.py  gui.py
qcdcal/: lifting_calculations.py  lifting_calculator.py  word_report.py  吊装相关验算.XLSX
wd/: .gitignore  README.md  pyproject.toml
wd/docs/superpowers/plans/: 2026-07-15-steel-structure-tender-word-formatter.md
wd/docs/superpowers/specs/: 2026-07-15-steel-structure-tender-word-formatter-design.md
wd/scripts/: build.ps1
wd/src/tender_formatter/: analyzer.py  classifier.py  config.py  cover.py  domain.py  formatter.py  main.py  planner.py  report.py  service.py  word_adapter.py
wd/src/tender_formatter/ui/: main_window.py  review_model.py
wd/tests/: conftest.py  helpers.py  test_analyzer.py  test_classifier.py  test_config.py  test_cover.py  test_domain.py  test_formatter.py  test_package_smoke.py  test_planner.py  test_report.py  test_service.py  test_ui.py  test_word_adapter.py
(+88 files in other folders)
