[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "tender-word-formatter"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = ["python-docx>=1.1,<2", "pydantic>=2.7,<3", "PySide6>=6.7,<7", "pywin32>=306"]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "pytest-qt>=4.4,<5", "pyinstaller>=6.8,<7"]

[project.gui-scripts]
tender-word-formatter = "tender_formatter.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
